--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,40 @@
-header {
-    background-color: aquamarine;
-}
-
-header img {
-    width: 300px;
-}
-
-header a {
-    color: black;
-    font-size: 18px;
-}
-
-h1 {
-    color: blue;
-}
+        header {
+            background-color: rgb(23, 116, 209);
+            height: 120px;
+        }
+        
+        header img {
+            width: 300px;
+            height: 100px;
+            position: fixed;
+            top: 15px;
+            left: 60px;
+            border-radius: 18px;
+        }
+        
+        a {
+            color: rgb(189, 228, 34);
+            font-size: 20px;
+            float: right;
+            margin-right: 3px;
+            margin-top: 0;
+            border: 5px solid #2b16a1;
+            text-decoration: none;
+            background-color: black;
+        }
+        
+        nav {
+            border: 2px solid rgb(0, 255, 68);
+            border-radius: 3px;
+            float: right;
+            margin-top: 20px;
+            margin-right: 3PX;
+        }
+        
+        h1 {
+            color: blue;
+        }
+        
+        body {
+            background-color: rgb(148, 142, 128);
+        }
