--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+        body {
+            background-color: rgb(148, 142, 128);
+            text-align: center;
+        }
+        
         header {
             background-color: rgb(23, 116, 209);
             height: 120px;
@@ -6,35 +11,71 @@
         header img {
             width: 300px;
             height: 100px;
-            position: fixed;
-            top: 15px;
-            left: 60px;
+            margin-top: 10px;
             border-radius: 18px;
         }
         
         a {
-            color: rgb(189, 228, 34);
-            font-size: 20px;
-            float: right;
+            color: black;
+            font-size: 13px;
             margin-right: 3px;
             margin-top: 0;
-            border: 5px solid #2b16a1;
             text-decoration: none;
-            background-color: black;
+            text-transform: uppercase;
+            padding: 5px;
+            font-weight: bold;
         }
         
         nav {
-            border: 2px solid rgb(0, 255, 68);
-            border-radius: 3px;
             float: right;
-            margin-top: 20px;
-            margin-right: 3PX;
+            margin-top: 40px;
+            margin-right: 18PX;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 8px;
+        }
+        
+        nav a:hover {
+            text-decoration: underline;
+            color: rgb(29, 31, 192);
         }
         
         h1 {
             color: blue;
+            font-size: 20px;
+            text-transform: uppercase;
+            text-align: center;
+            background-color: bisque;
+            padding: 5px;
+            border-radius: 30px;
+            width: 600px;
         }
         
-        body {
-            background-color: rgb(148, 142, 128);
+        h1,
+        div#infoMessage {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        
+        h1#h1relatorioSituacao {
+            width: 450px;
+        }
+        
+        h1#h1novoAluno {
+            width: 250px;
+        }
+        
+        h1#h1pesquisaAluno {
+            width: 350px;
+        }
+        
+        h1#h1controleAcesso {
+            width: 400px;
+        }
+        
+        div#infoMessage {
+            background-color: yellow;
+            padding: 5px;
+            width: 400px;
+            border-radius: 5px;
         }
