estilização de paginas em css3-final

--- a/css/style.css
+++ b/css/style.css
@@ -1,127 +1,193 @@
-        body {
-            text-align: center;
-            background-image: url(../img/imagemFundo.webp);
-            opacity: 0.9;
-            background-repeat: no-repeat;
-        }
-        
-        header {
-            background-color: rgb(23, 116, 209);
-            height: 120px;
-        }
-        
-        header img {
-            width: 300px;
-            height: 100px;
-            margin-top: 10px;
-            border-radius: 18px;
-        }
-        
-        a {
-            color: black;
-            font-size: 13px;
-            margin-right: 3px;
-            margin-top: 0;
-            text-decoration: none;
-            text-transform: uppercase;
-            padding: 5px;
-            font-weight: bold;
-        }
-        
-        nav {
-            float: right;
-            margin-top: 40px;
-            margin-right: 18PX;
-            background-color: bisque;
-            padding: 5px;
-            border-radius: 8px;
-        }
-        
-        nav a:hover {
-            text-decoration: underline;
-            color: rgb(29, 31, 192);
-        }
-        
-        h1 {
-            color: blue;
-            font-size: 20px;
-            text-transform: uppercase;
-            text-align: center;
-            background-color: bisque;
-            padding: 5px;
-            border-radius: 30px;
-            width: 600px;
-        }
-        
-        h1,
-        div#infoMessage,
-        fieldset {
-            margin-left: auto;
-            margin-right: auto;
-        }
-        
-        h1#h1relatorioSituacao {
-            width: 450px;
-        }
-        
-        h1#h1novoAluno {
-            width: 250px;
-        }
-        
-        h1#h1pesquisaAluno {
-            width: 350px;
-        }
-        
-        h1#h1controleAcesso {
-            width: 400px;
-        }
-        
-        div#infoMessage {
-            background-color: yellow;
-            padding: 5px;
-            width: 400px;
-            border-radius: 5px;
-        }
-        
-        fieldset {
-            background-color: bisque;
-            width: 400px;
-            text-align: left;
-            border-radius: 5px;
-            border: 0;
-        }
-        
-        legend {
-            background-color: bisque;
-            border-radius: 10px;
-            padding: 5px;
-            color: blue;
-            text-transform: uppercase;
-        }
-        
-        label {
-            color: rgb(54, 54, 185);
-        }
-        
-        input {
-            color: black;
-            background-color: antiquewhite;
-        }
-        
-        input[type=text]#nome,
-        input[type=text]#rua,
-        input[type=email] {
-            width: 95%;
-        }
-        
-        input[type=tel]#telefoneDDD {
-            width: 30px;
-        }
-        
-        input[type=tel]#telefoneNumero {
-            width: 90px;
-        }
-        
-        input[type=text]#id {
-            width: 50px;
-        }
+      html {
+          width: 100%;
+          height: 100%;
+      }
+      
+      body {
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          background-image: url(../img/imagemFundo.webp);
+          opacity: 0.9;
+          background-repeat: no-repeat;
+      }
+      
+      header {
+          background-color: rgb(23, 116, 209);
+          height: 120px;
+      }
+      
+      header img {
+          width: 300px;
+          height: 100px;
+          margin-top: 10px;
+          border-radius: 18px;
+      }
+      
+      a {
+          color: black;
+          font-size: 13px;
+          margin-right: 3px;
+          margin-top: 0;
+          text-decoration: none;
+          text-transform: uppercase;
+          padding: 5px;
+          font-weight: bold;
+      }
+      
+      nav {
+          float: right;
+          margin-top: 40px;
+          margin-right: 18PX;
+          background-color: bisque;
+          padding: 5px;
+          border-radius: 8px;
+      }
+      
+      nav a:hover {
+          text-decoration: underline;
+          color: rgb(29, 31, 192);
+      }
+      
+      h1 {
+          color: blue;
+          font-size: 20px;
+          text-transform: uppercase;
+          text-align: center;
+          background-color: bisque;
+          padding: 5px;
+          border-radius: 30px;
+          width: 600px;
+      }
+      
+      h1,
+      div#infoMessage,
+      fieldset,
+      table {
+          margin-left: auto;
+          margin-right: auto;
+      }
+      
+      h1#h1relatorioSituacao {
+          width: 450px;
+      }
+      
+      h1#h1novoAluno {
+          width: 250px;
+      }
+      
+      h1#h1pesquisaAluno {
+          width: 350px;
+      }
+      
+      h1#h1controleAcesso {
+          width: 400px;
+      }
+      
+      div#infoMessage {
+          background-color: yellow;
+          padding: 5px;
+          width: 400px;
+          border-radius: 5px;
+      }
+      
+      fieldset {
+          background-color: bisque;
+          width: 400px;
+          text-align: left;
+          border-radius: 5px;
+          border: 0;
+      }
+      
+      legend {
+          background-color: bisque;
+          border-radius: 10px;
+          padding: 5px;
+          color: blue;
+          text-transform: uppercase;
+      }
+      
+      label {
+          color: rgb(54, 54, 185);
+      }
+      
+      input {
+          color: black;
+          background-color: antiquewhite;
+      }
+      
+      input[type=text]#nome,
+      input[type=text]#rua,
+      input[type=email] {
+          width: 95%;
+      }
+      
+      input[type=tel]#telefoneDDD {
+          width: 30px;
+      }
+      
+      input[type=tel]#telefoneNumero {
+          width: 90px;
+      }
+      
+      input[type=text]#id {
+          width: 50px;
+      }
+      
+      input[type=button],
+      input[type=submit] {
+          background-color: rgb(183, 115, 32);
+          border-radius: 5px;
+          color: azure;
+          width: 20%;
+          height: 40px;
+          font-size: 18px;
+          text-transform: uppercase;
+      }
+      
+      input[type=button]:hover,
+      input[type=submit]:hover {
+          color: rgb(183, 115, 32);
+          background-color: bisque;
+      }
+      
+      table {
+          background-color: bisque;
+          font-size: 14px;
+          border-spacing: 1px;
+          border-collapse: separate;
+          width: 90%;
+          margin-top: 10px;
+          text-transform: uppercase;
+      }
+      
+      th {
+          background-color: burlywood;
+          color: azure;
+          text-transform: uppercase;
+          font-size: 15px;
+          padding: 3px;
+      }
+      
+      tr:nth-child(even) {
+          background-color: rgb(207, 192, 174);
+      }
+      
+      tr:nth-child(odd) {
+          background-color: rgb(224, 228, 146);
+      }
+      
+      tr:nth-child(even),
+      tr:nth-child(odd) {
+          font-size: 15px;
+          color: rgb(14, 39, 65);
+      }
+      
+      td {
+          padding: 2px;
+      }
+      
+      input#editar,
+      input#excluir {
+          width: 80px;
+      }
